JSP_test/WebContent/error/makeError.jsp
<%@ page language="java" contentType="text/html; charset=UTF-8"
    pageEncoding="UTF-8" errorPage="receiveError.jsp"%>
<%@ page trimDirectiveWhitespaces="true"%>

<%
		int k = 1/0;

%>